--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,12 @@
 root = true
-
+[index.html]
+ignore = true
 [*.{html,js,css,scss,json}]
 indent_style = space
 indent_size = 2
 end_of_line = lf
 charset = utf-8
 trim_trailing_whitespace = true
-
 insert_final_newline = true
 
 [*.{md,markdown,mdown,markdn}]
